@@ -1,7 +1,8 @@
 2005-11-21  Ian Lance Taylor  <ian@airs.com>
 
 	* proti.c (fiprocess_data): After receiving a packet successfully,
-	set afInaked and azIrecbuffers for that packet to FALSE.
+	set afInaked and azIrecbuffers for that packet to FALSE.  When
+	saving a packet, always replace the old data.
 
 2003-05-29  Ian Lance Taylor  <ian@airs.com>
 
